--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.1
 Django==2.2.6
 future==0.18.0
 get==2019.4.13
+gunicorn==19.9.0
 h11==0.8.1
 h2==3.1.1
 hpack==3.0.0
@@ -32,4 +33,5 @@ six==1.12.0
 sqlparse==0.3.0
 typed-ast==1.4.0
 urllib3==1.25.6
+whitenoise==4.1.4
 wrapt==1.11.2
