--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.1
 Django==2.2.6
 future==0.18.0
 get==2019.4.13
+gunicorn==19.7.1
 h11==0.8.1
 h2==3.1.1
 hpack==3.0.0
@@ -22,6 +23,7 @@ psycopg2==2.8.3
 public==2019.4.13
 pylint==2.4.2
 python-dateutil==2.8.0
+python-decouple==3.1
 pytz==2019.3
 query-string==2019.4.13
 request==2019.4.13
@@ -34,5 +36,3 @@ typed-ast==1.4.0
 urllib3==1.25.6
 whitenoise==4.1.4
 wrapt==1.11.2
-gunicorn==19.7.1
-
